--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -14,7 +14,7 @@ android {
 
     }
 
-    buildFeatures{
+    buildFeatures {
         dataBinding {
             enabled = true
         }
@@ -52,6 +52,7 @@ dependencies {
 
     //architecture components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     //dagger
     implementation "com.google.dagger:dagger:$rootProject.dagger"
@@ -63,4 +64,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 }
