--- a/features/detail/src/main/AndroidManifest.xml
+++ b/features/detail/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name=".DetailActivity" android:exported="true">
+        <activity
+            android:name=".DetailActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
